@@ -1,0 +1,2 @@
+	`{$property.full_alias}` int(11) DEFAULT '0' NOT NULL,
+
